# LLMChat

./: .gitignore  README.md  config.example.ini  main.py  pyproject.toml  requirements.txt  setup.py  update.py
llmchat/: __init__.py  blip.py  cli.py  client.py  config.py  logger.py  persistence.py  ui_extensions.py  version.py  voice_support.py
llmchat/llm_sources/: __init__.py  anthropic.py  llama.py  oai.py  poe.py
llmchat/sr_sources/: __init__.py  azure.py  google.py  whisper.py
llmchat/tts_sources/: __init__.py  azure.py  bark.py  elevenlabs.py  playht.py  silero.py
optional/: blip-requirements.txt  llama-requirements.txt  voice-requirements.txt
